Set VITE_DEBUG_MODE to false
Change VITE_DEBUG_MODE to false for production safety.

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 # ONLY USE IN DEVELOPMENT - DISABLE IN PRODUCTION
 #
 # Default: false
-VITE_DEBUG_MODE=true
+VITE_DEBUG_MODE=false
 
 # ============================================================================
 # CYBERARK API CONFIGURATION (Optional - can be set via login form)
